🐛(frontend) fix iframeResizer instantiation
The logic to retrieve the container of the LTIConsumer component did not support
the case when several plugins was on the same page. So even if there are several
plugins on the page, iframeResizer was only target the first one.

Furthermore, LTIConsumerPlugins styles was linked to the subheader container. So
if we put this plugin outside of this element, there was layout issue.

--- a/src/frontend/js/components/LtiConsumer/_styles.scss
+++ b/src/frontend/js/components/LtiConsumer/_styles.scss
@@ -1,9 +1,28 @@
-.lti-consumer {
-  animation: fadeIn 600ms cubic-bezier(0.33, 1, 0.68, 1) forwards;
-  background-color: #ffffff;
+.richie-react--lti-consumer {
+  &.aspect-ratio {
+    position: relative;
 
-  & > form {
-    display: none;
+    iframe {
+      position: absolute;
+      height: 100%;
+      object-fit: contain;
+      object-position: center;
+    }
+  }
+
+  & > .lti-consumer {
+    animation: fadeIn 600ms cubic-bezier(0.33, 1, 0.68, 1) forwards;
+    background-color: #ffffff;
+
+    & > form {
+      display: none;
+    }
+
+    & > iframe {
+      border: 0;
+      display: block;
+      width: 100%;
+    }
   }
 }
 @keyframes fadeIn {
